--- a/cover-letter.html
+++ b/cover-letter.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="Styles/Styles.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
     <div class="main">
@@ -61,18 +61,22 @@
         <div class="Contacts">
           <h3 class="Sidebar_title">Контакти</h3>
           <div>
-            <p>
-              <span class="contact_type">C:</span>
+            <div class="contact_type">
+              <svg class="" width="16" height="16">
+                <use href="./img/icons.svg#icon-tel"></use>
+              </svg>
               <a href="tel:+380672555368" class="contact_link"
                 >+380(67) 255 53 68</a
               >
-            </p>
-            <p>
-              <span class="contact_type">E:</span>
+            </div>
+            <div class="contact_type">
+              <svg class="" width="16" height="16">
+                <use href="./img/icons.svg#icon-mail"></use>
+              </svg>
               <a href="mailto:goodwater.kiev@gmail.com" class="contact_link"
                 >goodwater.kiev@gmail.com</a
               >
-            </p>
+            </div>
           </div>
         </div>
         <div class="Tech_Skills">
