--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="Styles/Styles.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
     <title>CV</title>
   </head>
   <body>
@@ -51,13 +51,13 @@
             <ul class="work_list">
               <li class="work_list_item">
                 Сервіс, монтаж та пуск обладнання згідно з технічними
-                характеристиками об`єкту
+                характеристиками об'єкту
               </li>
               <li class="work_list_item">
                 Консультації з питань роботи обладнання
               </li>
               <li class="work_list_item">
-                Сервісна підтримак існуючих клієнтів
+                Сервісна підтримка існуючих клієнтів
               </li>
             </ul>
           </div>
@@ -76,13 +76,13 @@
             <ul class="work_list">
               <li class="work_list_item">
                 Сервіс, монтаж та пуск обладнання згідно з технічними
-                характеристиками об`єкту
+                характеристиками об'єкту
               </li>
               <li class="work_list_item">
                 Консультації з питань роботи обладнання
               </li>
               <li class="work_list_item">
-                Сервісна підтримак існуючих клієнтів
+                Сервісна підтримка існуючих клієнтів
               </li>
             </ul>
           </div>
@@ -102,19 +102,19 @@
             <ul class="work_list">
               <li class="work_list_item">
                 Сервіс, монтаж та пуск обладнання згідно з технічними
-                характеристиками об`єкту
+                характеристиками об'єкту
               </li>
               <li class="work_list_item">
                 Консультації з питань роботи обладнання
               </li>
               <li class="work_list_item">
-                Сервісна підтримак існуючих клієнтів
+                Сервісна підтримка існуючих клієнтів
               </li>
             </ul>
             <h5 class="work_position">Досягнення:</h5>
             <p class="work_list_item">
               За 5 років було проведено було запущено в експлуатацію або
-              модернізовано більш ніж 60 промислових об`єктів, серед клієнтів
+              модернізовано більш ніж 60 промислових об'єктів, серед клієнтів
               були таки як Kernel, Karlsberg, БіоФарма, Фармак, ТЕЦ 5, ГУР та
               інші.
             </p>
@@ -139,18 +139,22 @@
         <div class="Contacts">
           <h3 class="Sidebar_title">Контакти</h3>
           <div>
-            <p>
-              <span class="contact_type">C:</span>
+            <div class="contact_type">
+              <svg class="" width="16" height="16">
+                <use href="./img/icons.svg#icon-tel"></use>
+              </svg>
               <a href="tel:+380672555368" class="contact_link"
                 >+380(67) 255 53 68</a
               >
-            </p>
-            <p>
-              <span class="contact_type">E:</span>
+            </div>
+            <div class="contact_type">
+              <svg class="" width="16" height="16">
+                <use href="./img/icons.svg#icon-mail"></use>
+              </svg>
               <a href="mailto:goodwater.kiev@gmail.com" class="contact_link"
                 >goodwater.kiev@gmail.com</a
               >
-            </p>
+            </div>
           </div>
         </div>
         <div class="Tech_Skills">
@@ -232,4 +236,5 @@
       </aside>
     </div>
   </body>
+  <script src="./js/menu.js"></script>
 </html>
